--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^15.4.2",
     "next-connect": "^1.0.0",
     "next-theme": "^0.1.5",
