--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
