--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "^15.4.2",
